_sass/_custom.scss
/* base */
body {
    font-family: $base-font-family;
    font-size: $base-font-size;
    color: $black-color;
    overflow-x: hidden;
}
a {
    color: $clearwater;
    text-decoration: none;
    font-weight: normal;
    &:hover {
        color: $text-color;
        text-decoration: underline;
    }
}

.split-background {
    background: linear-gradient(to right, #e8e8e8 0%, #e8e8e8 50%, #fdfdfd 50%, #fdfdfd 100%);
}

.page-block { 
    background: $background-color;
    padding-top: 100px;
    min-height: 800px;
}

.small-page {
    padding-top: 100px;
}

/* banner */
.title-card {
    background-color: #25242485;
    background-color: rgba(37, 36, 36, 0.52);
    color: white !important;
    margin:0px -22px;}

#title {
    a { 
        font-size: 35px;
        font-weight: 300;
        color: $text-color;
    }
    h1 {
        line-height: 1;
    }
    p {
        font-size: 14.5px;
        line-height: 1;
    }
}

.browse-card {
    background: rgba(52, 58, 64, 0.8);
}

#home-banner {
    padding-top: 100px;
}

/* nav */
.lib-logo-lg {
    max-height: 80px;
}

.lib-logo-md {
    max-height: 40px;
}

.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
    color: rgba(255,255,255,.75);
}

.navbar-dark .navbar-nav .nav-link {
    color: rgba(255,255,255,.5);
}

.navbar-default { 
  transition:500ms ease;
  background: #343a40;
}

.navbar-default.scrolled {
  background:rgba(52, 58, 64, 0.8);
}

.navbar-default.scrolled .lib-logo-lg {
    display: none;
}

.categorynav {
    margin-top: 110px;
}

/* cards */
.card-img-top {
    width: 100%;
    height: 30vh;
    object-fit: cover;
}

.square {
    width: 100%;
    height: 20vh;
    object-fit: cover;
}

.btn-round{
    border-radius: 30px;
}

.highlight {
    background-color: rgba(52, 58, 64, .9);
    position: absolute;
    height: auto;
    width: 100%;
    color: #FFF;
    /*top: 85px;*/
    z-index: 1;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

.titlebg {
    margin: -20px -20px 10px;
}

/* browse */
.hidden-format-for-browse{
    color:rgba(0, 0, 0, 0);
    font-size:1px;
    line-height: 1px;
}

/* map */
#map { height: 750px; z-index: 98; margin-top: 110px; }

.mapthumb {
    height: 100px;
    box-shadow: 2px 2px 2px grey;
}

/* sidebar */
#sidebar {
    background: $nav-background;
    position: sticky;
    position: -webkit-sticky; /* Safari */
    top: 23%;
}

#sidenav {
    font-size:18px;
    margin-top: 25px;
    a {
        font-weight: 300 !important;
        color: $text-color;
    }
    li { border-color: #d5d5d5 !important; }
}

#sidenav .active {
    background-color: #fff !important; 
    border-right: 2px solid;
    border-right-color: #191919 !important;
}

.dropdown-toggle::after {
    margin-left: 15px;
}

/* all Collections nav */
.ijclist{
    padding-left:0px;
}
#ijclink{
    font-size:13px !important;
    margin-left:20px;
}
.hangingindent {
    padding-left: 22px ;
    text-indent: -22px ;
}
.collection-list{
    list-style: none;
    padding-left:10px;
    ul{
        list-style: none;
        padding-left:20px; 
    }
    a{
        font-weight: normal;
    }
}
#collectionslink {
    cursor: pointer;
    z-index: 999;
    position: absolute;
    right: 0px;
    top: 0px;
    color: white;
    font-size: 14px;
    background: #999;
    border-radius: 0px 0px 0px 20px;
    padding: 5px 20px;
    border-bottom: 1px #dadada solid;
    margin: 0;
    font-weight: 300;
}
#collectionslink p {
    margin: 0; 
}

/* Subject Cloud */
.tagcloud0{
    font-size:0.8em;
    z-index: 10; }
.tagcloud0 a {
color: #1D1E33; }

.tagcloud1{
font-size:0.8em;
z-index: 9; }

.tagcloud1 a {
color: #18171C; }

.tagcloud2{
font-size:1.2em;
z-index: 8; }

.tagcloud2 a {
color: #1E2460; }

.tagcloud3{
font-size:1.4em;
z-index: 7; }

.tagcloud3 a {
color: #3E5F8A; }

.tagcloud4{
font-size:1.7em;
z-index: 6; }

.tagcloud4 a {
color: #26252D; }

.tagcloud5{
font-size:2.0em;
z-index: 5; }

.tagcloud5 a {
color: #025669; }

.tagcloud6{
font-size:2.4em;
z-index: 4; }

.tagcloud6 a {
color: #0E294B; }

.tagcloud7{
font-size:2.7em;
z-index: 3; }

.tagcloud7 a {
color: #231A24; }

.tagcloud8{
font-size:3em;
z-index: 2; }

.tagcloud8 a {
color: #3B83BD; }

.tagcloud9{
font-size:3.3em;
z-index: 1; }

.tagcloud9 a {
color: #1E213D; }

.tagcloud10{
font-size:3.6em;
z-index: 0; }

.tagcloud10 a {
color: #606E8C; }

#cloud {
margin: 0px 30px 30px;
padding: 4px; }

/* screen size cutomization */
@include media-query($on-palm) {
    .navbar {
        min-height:100px; 
    }
    .page-block { 
        padding-top: 40px;
    }
    #map {
        margin-top: 100px !important;
    }
    .categorynav {
        margin-top: 100px;
    }
}

@include media-query($on-laptop) {
    .navbar {
        min-height:100px; 
    }
    .lib-logo-md {
        visibility: visible;
    }
    .page-block { 
        padding-top: 70px;
    }
    #map {
        margin-top: 100px !important;
    }
    .categorynav {
        margin-top: 100px;
    }
}

@include media-query($on-desktop) {
    .navbar {
        min-height:100px; 
    }
    #map {
        margin-top: 100px !important;
    }
    .categorynav {
        margin-top: 95px;
    }
}

